14. Open 'Lyrion technical information' link in new window/tab using 'Default'
    skin.
15. Add link to lyrion.org in 'Information' dialog.
16. For LMS 9.1+ add 'Popular Albums/Releases', 'New Artists', 'Recently
    Played Artists', and 'Popular Artists' to standard horizontal lists.
17. Fix browsing from favourited genre.

6.0.5
-----
1. Work-around desktop splitter showing in now-playing if queue is pinned.
2. Fix 'Play shuffled' not showing in more places.
3. Add SVG icon for 'SiriusXM'
4. Fix showing full size JPG from imageproxy.
5. Remove double-click on back button for 'go home'.
6. Hide 'Playlists' scrollable list option unless playlist images are enabled.
7. Show full image when using 'Show image' on playlist image.

6.0.4
-----
1. Fix error with 'Go to artist' and no player connected.
2. Add 'Select' action to headers in track lists.
3. Copy all album attributes when creating scrolled lists.

6.0.3
-----
1. Fix position of home button on detailed sub-toolbar when using top padding.
2. Fix some untranslated strings in 'Interface' dialog.
3. Add list/grid toggle back to home screen - but use a different icon for
   grid view (if showing scrollable lists).
4. Add 'sxm' to list of radio protocols.
5. Reduce grid size.
6. Fix playing multi-disc/group items from scrollable lists.
7. Determine scrollbar thickness via Javascript, rather than hard-coding.

6.0.2
-----
 1. Fix track list being cut short in desktop layout.
 2. Fix storing of genre grid/list setting.
 3. Fix toggling grid/list for genres with more than 100 items.
 4. Check album/track sort is valid.
 5. When starting a stream from 'Radios' section first try to convert to
    favourites ID.
 6. Use virtual library ID when populating scrolled lists.
 7. Add toolbar button to change virtual library on home screen.
 8. Only display virtual library name if its not default library.
 9. Use LMS's 'New Music Limit' for album scrolled lists, and 200 for radios
    and playlists.